style: Organização de itens e otimização de processos.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -209,6 +209,7 @@ header {
 /*  */
 .window {
     position: relative;
+    margin-top: 60px;
     width: 80%;
     max-width: 800px;
     background: #1616189c;
