--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@ body, html {
     overflow: hidden; /* Para garantir que não apareça uma barra de rolagem */
     background-color:var(--color-primaria);
     color: var(--color-cinco);
+    font-family: 'Poppins', sans-serif;
  
 }
 a {
@@ -68,7 +69,7 @@ header {
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    background-color: #161618;
+    background-color: #161816;
     margin-top: 30px;
 }
 #box-windo{
@@ -212,7 +213,9 @@ header {
     margin-top: 60px;
     width: 80%;
     max-width: 800px;
-    background: #1616189c;
+    background: #00000098;  
+    backdrop-filter: blur(10px); /* Aplica desfoque ao que está atrás do contêiner */
+    -webkit-backdrop-filter: blur(10px); /* Suporte para navegadores WebKit */
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
     z-index: 1; /* Para garantir que a "janela" fique acima do fundo */
